# se-toolkit-hackathon

./: Dockerfile.bot  Dockerfile.web  LICENCE-ORIGINAL  LICENSE  README.md  docker-compose.yml  pyproject.toml
.qwen/: settings.json
bot/: bot.py  config.py  database_broadcast.py  scheduler_broadcast.py
bot/handlers/: __init__.py  water_handlers.py
db/: init_broadcast.sql
docs/screenshots/: README.md
hydration-bot/: .env  .env.example  Dockerfile  Dockerfile.web  README.md  docker-compose.yml  requirements-web.txt  requirements.txt
hydration-bot/bot/: __init__.py  config.py  database.py  handlers.py  main.py  scheduler.py
hydration-bot/db/: init.sql  migrate_auth.sql
hydration-bot/web/: __init__.py  app.py
hydration-bot/web/static/: style.css
hydration-bot/web/templates/: base.html  broadcast_form.html  dashboard.html  login.html  participants.html  register.html
instructors/: course.md  ideas.md
lab/tasks/required/: task-2.md
web/: app.py  pyproject.toml
web/static/: style.css
web/templates/: base.html  broadcast_form.html  dashboard.html  logs.html  participants.html
wiki/: git.md  llm.md
