[project]
name = "broadcast-web"
version = "0.1.0"
description = "Event Broadcast Dashboard Web App"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
